# groundatlas

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPRECATION.md  PROJECT.md  README.md  SECURITY.md  action.yml  biome.json  groundatlas.config.json  package.json  project.manifest.json  tsconfig.build.json  tsconfig.json
.doctrine/: project.json
crates/groundatlas-scanner/: Cargo.toml
crates/groundatlas-scanner/src/: adoption.rs  audit.rs  classify.rs  explain.rs  fleet.rs  fs.rs  git.rs  lib.rs  main.rs  scan.rs  types.rs
crates/groundatlas-scanner/tests/: audit_differential.rs  basic_fixture_parity.rs  cli_version.rs  explain_differential.rs  health_subcommand.rs  scan_differential.rs  scan_subcommand.rs
examples/: project.manifest.json
schemas/: project.manifest.schema.json
scripts/: assert-dogfood-report.mjs  assert-json-file.mjs  check-native-scanner-shipped.sh  check-no-ts-audit-backend.sh  check-no-ts-impact-backend.sh  check-no-ts-init-backend.sh  check-no-ts-manifest-backend.sh  check-no-ts-scan-backend.sh  check-no-ts-update-backend.sh  dogfood-external-repo.mjs  fix-shebang.mjs  npm-registry-preflight.mjs  npm-registry-readback.mjs  run-groundatlas-differential.sh  run-unit-tests.sh  smoke-github-action.mjs  smoke-installed-package.mjs  smoke-packed-package.mjs  stage-rust-scanner.ts  validate-github-action.mjs  validate-project-manifest.mjs  validate-public-assets.mjs  validate-workflows.mjs  verify-release-version.mjs
src/: cli.ts  index.ts  manifest.ts
test/: auditParity.test.ts  groundatlas.test.ts  (+13 more)
(+70 files in other folders)
