[package]
name = "groundatlas-scanner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "GroundAtlas Rust scanner CLI (ADR-168 S0 health + version)"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "groundatlas-scanner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
